// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return the correct count and total for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     
    totalling 
    $129.40
  </h1>
</div>
`;

exports[`should return the correct count and total for 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     
    totalling 
    $20.00
  </h1>
</div>
`;
